--- a/.stylelintrc
+++ b/.stylelintrc
@@ -10,7 +10,7 @@
             }
         ],
         "at-rule-no-unknown": true,
-        "at-rule-no-vendor-prefix": true,
+        "at-rule-no-vendor-prefix": null,
         "block-no-empty": true,
         "color-function-notation": null,
         "color-hex-alpha": "never",
@@ -57,7 +57,7 @@
         ],
         "media-feature-name-no-unknown": true,
         "media-feature-name-value-no-unknown": true,
-        "media-feature-name-no-vendor-prefix": true,
+        "media-feature-name-no-vendor-prefix": null,
         "named-grid-areas-no-invalid": true,
         "no-descending-specificity": null,
         "no-duplicate-at-import-rules": true,
@@ -68,7 +68,7 @@
         "no-irregular-whitespace": true,
         "number-max-precision": 2,
         "property-no-unknown": true,
-        "property-no-vendor-prefix": true,
+        "property-no-vendor-prefix": null,
         "rule-empty-line-before": [
             "always",
             {
@@ -94,7 +94,7 @@
                 "camelCaseSvgKeywords": true
             }
         ],
-        "value-no-vendor-prefix": true,
+        "value-no-vendor-prefix": null,
 
         "codeguide/at-rule-name-case": "lower",
         "codeguide/at-rule-name-space-after": "always",
