Добавит слайдеру адаптив на страницу task

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "selector-class-pattern": null,
     "no-descending-specificity": null,
     "declaration-colon-newline-after": null,
-    "value-list-comma-newline-after": null
+    "value-list-comma-newline-after": null,
+    "value-no-vendor-prefix": null
   }
 }
